--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -508,6 +508,18 @@
 	doi = "10.1016/0550-3213(76)90115-2",
 }
 
+@Article{bystricky78,
+	author = "BYSTRICKY, J., LEHAR, F. and WINTERNITZ, P.",
+	title = "Formalism of nucleon-nucleon elastic scattering experiments",
+	journal = "J. Phys. France",
+	year = 1978,
+	volume = 39,
+	number = 1,
+	pages = "1-32",
+	DOI= "10.1051/jphys:019780039010100",
+	url= "http://dx.doi.org/10.1051/jphys:019780039010100",
+}
+
 @Article{buttimore78,
       author         = "BUTTIMORE, N. H., GOTSMAN, E. and LEADER, E.",
       title          = "Spin dependent phenomena induced by electromagnetic hadronic interference at high-energies",
