--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -227,6 +227,8 @@ Now let us describe the run conditions used for the first elastic scattering mea
 
 \> tot cs due to the hadronic interaction only, the one for the em int. is infinite
 
+\> the approximation \Eq{el spinless si} is rather an expectation than a rigorously proved statement, thus some skepticism is due -- like in Martin
+
 \fig{fig/pdf/sigma_tot.pdf}{sigma tot}{Fits from the COMPETE collaboration \bref{cudell02} to all available $\rm pp$ and $\rm \bar pp$ data on the total cross-section. The thick solid line represents the best fit with statistical error band. The dashed lines show the total error band from all models considered.}
 
 \> below, what $\sqrt s$ ?? $7\un{TeV}$ ??
