--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -512,12 +512,11 @@
 	author = "BYSTRICKY, J., LEHAR, F. and WINTERNITZ, P.",
 	title = "Formalism of nucleon-nucleon elastic scattering experiments",
 	journal = "J. Phys. France",
-	year = 1978,
-	volume = 39,
-	number = 1,
+	year = "1978",
+	volume = "39",
+	number = "1",
 	pages = "1-32",
 	DOI= "10.1051/jphys:019780039010100",
-	url= "http://dx.doi.org/10.1051/jphys:019780039010100",
 }
 
 @Article{buttimore78,
@@ -1051,8 +1050,10 @@
 	author = "FORM\' ANEK, J.",
 	title = "\' Uvod do relativistick\' e kvantov\' e mechaniky a kvantov\' e teorie pole [An introduction to relativistic quantum mechanics and quantum field theory]",
 	publisher = "Karolinum",
+	address="Praha"
 	year = "2000",
 	ISBN= "80-246-0063-3"
+	edition="2nd"
 }
 
 @Book{anton,
